test setTimeOut and setInterval method and clear

--- a/browser.html
+++ b/browser.html
@@ -6,6 +6,14 @@
     <title>BOM</title>
 </head>
 <body>
+    <div id="main">
+        <button type="button" id="alert">Alert</button>
+        <button type="button" id="confirm">Confirm</button> 
+        <button type="button" id="prompt">Prompt</button>
+        <button type="button" id="print">Print</button>
+        <button type="button" id="set">set</button>
+        <button type="button" id="clear">clear</button>
+    </div>
     <script src="./scripts/BOM.js"></script>
 </body>
 </html>
