--- a/history.html
+++ b/history.html
@@ -28,6 +28,6 @@
         <button type="button" id="detailsnavigator">details navigator</button>
         <p id="text1"></p>
     </div>
-    <script src="./scripts/handleErrors.js"></script>
+    <script src="./scripts/IteratorsAndGenerators.js"></script>
 </body>
 </html>
